# sphinx-diagrams

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sphinx_diagrams/: __init__.py  diagrams_base.py  sphinx_diagrams.py
