[tool.poetry]
name = "sphinx-diagrams"
version = "0.2.0"
description = ""
authors = ["Jean-Martin Archer <jm@jmartin.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
diagrams = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
