[tool.poetry]
name = "sphinx-diagrams"
version = "0.2.1"
description = "Rendering Diagrams in Sphinx"
authors = ["Jean-Martin Archer <jm@jmartin.ca>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/j-martin/sphinx-diagrams"

[tool.poetry.dependencies]
python = "^3.6"
diagrams = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
