[tool.poetry]
name = "sphinx-diagrams"
version = "0.4.0"
description = "Rendering Diagrams in Sphinx"
authors = ["Jean-Martin Archer <jm@jmartin.ca>"]
readme = "README.md"
license = "BSD-2"
repository = "https://github.com/j-martin/sphinx-diagrams"

[tool.poetry.dependencies]
python = ">=3.6, <4.0"
diagrams = ">=0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
